--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://RhettHill.github.io/Game-View",
+  "homepage": "https://rhetthill.github.io/Game-View",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
